--- a/crates/yewdux/Cargo.toml
+++ b/crates/yewdux/Cargo.toml
@@ -19,6 +19,5 @@ slab = "0.4"
 thiserror = "1.0"
 wasm-bindgen = "0.2"
 web-sys = "0.3.51"
-yew = { git = "https://github.com/yewstack/yew.git" }
+yew = { git = "https://github.com/yewstack/yew.git", rev = "8ba6af21f" }
 yewdux-macros = { path = "../yewdux-macros" }
-
